# WitsV3

./: .copilot-instructions.md  .coveragerc  .cursorrules  .cursorrules.md  .cursorrules.txt  .env.example  .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLAUDE_EVOLUTION_PROMPT.md  DOCKER_INSTRUCTIONS.md  Dockerfile  Dockerfile.background  Dockerfile.sandbox  EVOLUTION_PLAN_1_MULTI_AGENT_REASONING.md  EVOLUTION_PLAN_2_TOOL_COMPOSITION.md  EVOLUTION_PLAN_3_CODE_QUALITY.md  EVOLUTION_SESSION_STATUS_REPORT.md  FILE_STRUCTURE.md  LICENSE  MANIFEST.in  Makefile  PATH_MIGRATION_GUIDE.md  PLANNING.md  README.md  REFACTORING_COMPLETE_ADVANCED_CODING.md  REFACTORING_COMPLETE_NEURAL_BACKEND.md  REFACTORING_COMPLETE_RESPONSE_PARSER.md  TASK.md  WITSV3_EVOLUTION_SUMMARY.md  WITSV3_FIXES.md  WORKTREES.md  __init__.py  clinerules.txt  config.yaml  create_dummy_model.py  (+44 more)
.cursor/: Dockerfile  cursor_environment_fix.json
.github/: copilot-instructions.md
agents/: __init__.py  advanced_coding_agent.py  agent_handoff.py  background_agent.py  base_agent.py  base_orchestrator_agent.py  book_writing_agent.py  book_writing_handlers.py  book_writing_helpers.py  book_writing_models.py  book_writing_worldbible.py  book_writing_writer.py  coding_handlers.py  coding_models.py  coding_scaffolds.py  conversation_handler.py  enhanced_book_agent_with_fallback.py  integration_guide.md  llm_driven_orchestrator.py  native_tool_orchestrator.py  neural_orchestrator_agent.py  orchestrator_codebase.py  orchestrator_observations.py  orchestrator_preflight.py  orchestrator_synthesis.py  orchestrator_tool_helpers.py  playbook_executor.py  routing_classifier.py  self_repair_agent.py  self_repair_handlers.py  self_repair_models.py  self_repair_utils.py  wcca_intent_mixin.py  wcca_routing_mixin.py  wits_control_center_agent.py
config/: agent_graph.yaml  background_agent.yaml  ethics_overlay.yaml  guest_policy.yaml  orchestrator_prompt.yaml  wits_core.yaml  wits_personality.yaml
core/: __init__.py  adaptive_llm_config.py  adaptive_llm_interface.py  agent_collaboration.py  auth_manager.py  base_tool.py  cognitive_architecture.py  cognitive_architecture_updated.py  complexity_analyzer.py  concrete_collaboration.py  concrete_meta_reasoning.py  config.py  content_fallback_system.py  content_policy.py  conversation_compaction.py  core_memory.py  cross_domain_learning.py  docker_sandbox.py  document_hybrid_search.py  dynamic_module_loader.py  enhanced_llm_interface.py  enhanced_mcp_adapter.py  escalation.py  fact_extraction.py  faiss_memory_backend.py  file_watcher.py  filesystem_policy.py  guest_access.py  guest_audit.py  guest_policy_loader.py  guest_user_profile.py  injection_guard.py  json_llm_parser.py  knowledge_graph.py  knowledge_log.py  llm_interface.py  logging_config.py  mcp_adapter.py  mcp_health.py  mcp_registry_search.py  (+38 more)
data/: README.md  mcp_config.json  mcp_tools.json  neural_web.json  neural_web.json.template  neural_web_backup.json  wits_memory.json.template
docs/: IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MEMORY_HANDLER_FIXES.md  README.md  README_SYNTHETIC_BRAIN.md  REMAINING_TASKS.md  SYNTHETIC_BRAIN.md  SYNTHETIC_BRAIN_NEXT_STEPS.md  SYNTHETIC_BRAIN_PR.md  architecture.rst  index.rst  installation.rst  model-reliability-system.md  quickstart.rst  watchdog-and-wake-timer.md
exports/: chat_log_report_failure.txt
gui/: COMPLETED.md  chat_widgets.py  color_schemes.py  matrix_rain.py  matrix_ui.py  matrix_window.py  requirements.txt
historical_scripts/: adaptive_llm_interface.py.backup  apply_fixes.py  config.yaml.backup  diagnostic_results.json  diagnostic_runner.py  environment.json.backup.1749496561  launch.json.backup.1749496561  llm_diagnostic.py  llm_diagnostic.py.backup.encoding  llm_diagnostic.py.backup.logging  llm_diagnostic_basic.py.backup.encoding  llm_diagnostic_basic.py.backup.logging  llm_interface_fix.py  memory_search_fix.py  run.py.backup  run.py.backup.encoding  run_enhanced.py  run_test.py.backup.encoding  test_runner_script.py  test_witsv3.py.backup.1749496561  test_witsv3.py.backup.encoding  test_witsv3.py.backup.logging  unicode_log_fix.py  updated_launch_config.json
mcp_logs/: connection_log.txt  debug_log.txt
mcp_servers/: README.md
models/: base_module.safetensors  chat_expert.safetensors  creative_expert.safetensors  math_expert.safetensors  planning_expert.safetensors  python_expert.safetensors  reasoning_expert.safetensors
planning/: DOCUMENTATION_REORGANIZATION.md  README.md
scripts/: README.md  a42ee2e0_live_smoke.py  add_metadata.py  analyze_bsod.ps1  analyze_memory.py  cleanup_backups.py  cleanup_originals.py  clone_mcp_servers.py  conversation_task_smoke.py  debug_init.py  doc_maintenance.py  docker_sandbox_verify.py  ensure_docker_desktop.ps1  fakecarl_profile_smoke.py  fix_neural_web.py  guest_smoke_test.py  llm_diagnostic_basic.py  manage_background_agents.py  migrate_docs.py  read_wer_report.ps1  register_docker_companion_task.ps1  restore_runtime_memory.ps1  setup_local_data.py  setup_mcp_servers.py  smoke_ab_compare.py  smoke_harness.py  smoke_scenarios.yaml  standardize_format.py  sync_guest_display_names.py  tester_label_smoke.py  tester_live_smoke.py  update_readme.py  witsv3_watchdog.ps1
tests/: config.yaml  conftest.py  test_adaptive_llm.py  test_agent.py  test_import.py  test_neural_memory_backend.py  test_neural_web_fix.py  test_run_self_repair_schedule.py
tools/: __init__.py  ask_claude_tool.py  base_tool.py  conversation_history_tool.py  core_memory_tools.py  document_tools.py  enhanced_reasoning.py  enhanced_reasoning_models.py  enhanced_reasoning_patterns.py  file_tools.py  greeting_util.py  json_tool.py  (+16 more)
(+313 files in other folders)
